(tests
 (names test_oktree)
 (preprocess
  (pps
   ppx_deriving.show
   ; ( for hask.ml
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_deriving.enum
   ppx_deriving.map
   ppx_deriving.fold
   ppx_deriving.iter
   ; ...)
   ppx_deriving_popper))
 (libraries popper gg oktree))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
